first GPU kernel: motor-binding via TornadoVM (one-plan transfer-bound spike)
First TornadoVM kernel for BoA. Translates the step-1b SoA motor-binding
fine-check into a brute-force GPU kernel (parallel over motor heads,
sequential inner loop over all live segments, first-hit-wins). Deliberately
Sim3D-shaped: one TaskGraph, per-step EVERY_EXECUTION pack/execute/unpack,
CPU-side state-of-record. The kernel produces a per-motor "boundSegId"
decision; the CPU walks that buffer and fires the binding event
(ontoFilament) serially, preserving step-1b's decide-vs-event boundary.

The transfer-bound antipattern is the smallest-blast-radius first port;
iteration 2 will refactor to two-plan persistent residency. Success
criterion is statistical agreement with the CPU baseline, not speedup.

Validation (10 seeds, glidingAssay500_val, 0.1 s):

  observable        CPU                GPU                |diff|/cSEM
  bindEvents        816.1 ± 30.4       852.1 ± 27.7       0.88   PASS
  meanBoundMotors   7.275 ± 0.197      7.242 ± 0.179      0.12   PASS
  velocity (µm/s)   4.606 ± 0.191      4.741 ± 0.156      0.54   PASS

Wall-clock 228.2 s/seed CPU vs 251.5 s/seed GPU (1.10x slower). The slower
GPU result confirms the transfer-bound diagnosis and motivates iteration 2.

GPU per-call breakdown over 10101 calls: pack 0.13 ms, exec 4.12 ms,
unpack 0.06 ms. The exec phase dominates by 30x — the lever for iteration 2
is per-call execute overhead (kernel launch + EVERY_EXECUTION transfer
batching), addressed by persistent residency.

Files:
  boxOfActin/GPUMotorBinding.java  — new kernel class (Sim3D-shaped)
  boxOfActin/Env.java              — added Env.useGPU flag
  boxOfActin/BoxOfActin.java       — -gpu flag parsing, dispatch mutex
                                     in doLoop, GPU timing in [STATS]
  CLAUDE.md                        — -g added to javac (PTX local var
                                     tables); GPU run command added
  JOURNAL.md                       — session en